# code-proxy

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  使用手册.md
.claude/: ralph-loop.local.md  settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  database.rs  lib.rs  main.rs  provider.rs
src-tauri/src/mcp/: mod.rs  server.rs
src-tauri/src/proxy/: handlers.rs  mod.rs  server.rs  streaming.rs  transform.rs  transform_responses.rs
src-tauri/src/session_manager/: mod.rs
src-tauri/src/session_manager/providers/: mod.rs
src-tauri/tests/: single_instance_test.rs
src/components/: ProviderSelector.tsx  ProxyToggle.tsx  SessionManager.tsx
src/lib/: api.ts
src/lib/i18n/: index.ts
src/locales/: en-US.json  zh-CN.json
