[package]
name = "code-proxy"
version = "0.1.0"
description = "Claude Code Proxy - Protocol conversion between OpenAI and Anthropic"
authors = ["you"]
edition = "2021"

[lib]
name = "code_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
futures = "0.3"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
base64 = "0.22"
http = "1"
regex = "1"
chrono = "0.4"
async-stream = "0.3"
bytes = "1"

